# docs2web

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docs2web.opam  dune-project  dune-workspace  schema.json  watch.sh
pages/: docs.re  dune  index.re  notfound.re  package.re  packages.re  template.re
src/: config.ml  docs_api.ml  documentation.ml  documentation.mli  dune  opam_git.ml  opam_repository.ml  package.ml  package.mli  state.ml  state.mli
static/: main.css  odoc.css
