opam-version: "2.0"
maintainer: "The opam team"
authors: "The opam team"
homepage: "https://github.com/ocaml/opam2web"
bug-reports: "https://github.com/ocaml/opam2web/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune"
  "dream"
  "git-unix"
  "tyxml-jsx"
  "lambdasoup"
  "reason"
]
build: [
#  ["dune" "subst"] {pinned}
# until https://github.com/ocaml/dune/issues/1997
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml/opam2web.git"
synopsis: "Tool to generate the opam.ocaml.org website"
description: """
This utility creates a static website from an OPAM universe, listing all
available packages and their details. A homepage and OPAM documentation is 
included as well.
"""
